--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -23,7 +23,7 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(114, 159, 207, 255), stop:1 rgba(255, 255, 255, 255));</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGraphicsView" name="graphicsView">
@@ -133,6 +133,9 @@ border-style:inset;
     <property name="autoFillBackground">
      <bool>false</bool>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="inputMethodHints">
      <set>Qt::ImhNone</set>
     </property>
@@ -196,8 +199,7 @@ border-style:inset;
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(110, 160,120);
-border-radius:10px;</string>
+     <string notr="true">border-radius:7px;</string>
     </property>
     <property name="title">
      <string>Replace color</string>
@@ -245,8 +247,8 @@ border-radius:10px;</string>
       <rect>
        <x>130</x>
        <y>150</y>
-       <width>41</width>
-       <height>41</height>
+       <width>45</width>
+       <height>45</height>
       </rect>
      </property>
      <property name="font">
@@ -262,7 +264,7 @@ border-radius:10px;</string>
 background-image: url(:/res/Icons/ColorPicker.png);
  background-repeat:norepeat;
 background-position:center;
-border: 3px solid blue;
+border: 5px solid lightblue;
 border-radius: 10px;
 border-style: outset;
 }
@@ -294,16 +296,13 @@ border-style: inset;
      </property>
      <property name="styleSheet">
       <string notr="true">#ApplyButton{
-border: 3px solid blue;
+border: 5px solid lightblue;
 border-radius: 10px;
 border-style: outset;
 font-size:16px;
 }
 #ApplyButton:pressed{
 border-style: inset;
-}
-#ApplyButton:hover{
-background-color: blue;
 }</string>
      </property>
      <property name="text">
@@ -510,6 +509,9 @@ border-style: inset;
       <width>60</width>
       <height>50</height>
      </rect>
+    </property>
+    <property name="toolTip">
+     <string>Save image</string>
     </property>
     <property name="styleSheet">
      <string notr="true">#Button_Save{
