--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -95,6 +95,9 @@ border-style:inset;
     <property name="checkable">
      <bool>false</bool>
     </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
     <property name="autoDefault">
      <bool>false</bool>
     </property>
@@ -190,25 +193,34 @@ border-style:inset;
     </property>
    </widget>
    <widget class="QGroupBox" name="groupBox">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>320</y>
-      <width>201</width>
-      <height>341</height>
+      <x>40</x>
+      <y>260</y>
+      <width>241</width>
+      <height>363</height>
      </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
     </property>
     <property name="styleSheet">
      <string notr="true">border-radius:7px;</string>
     </property>
     <property name="title">
-     <string>Replace color</string>
+     <string notr="true">Replace color</string>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
     </property>
     <widget class="QProgressBar" name="progressBar">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>310</y>
+       <y>280</y>
        <width>181</width>
        <height>23</height>
       </rect>
@@ -229,24 +241,11 @@ border-style:inset;
       <bool>false</bool>
      </property>
     </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>100</y>
-       <width>101</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Selected color:</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>150</y>
+       <x>60</x>
+       <y>120</y>
        <width>45</width>
        <height>45</height>
       </rect>
@@ -289,7 +288,7 @@ border-style: inset;
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>260</y>
+       <y>230</y>
        <width>71</width>
        <height>41</height>
       </rect>
@@ -313,7 +312,7 @@ border-style: inset;
      <property name="geometry">
       <rect>
        <x>120</x>
-       <y>90</y>
+       <y>60</y>
        <width>71</width>
        <height>41</height>
       </rect>
@@ -322,47 +321,11 @@ border-style: inset;
       <string notr="true">background-color: rgb(136, 138, 133);</string>
      </property>
     </widget>
-    <widget class="QLabel" name="changedColor">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>160</y>
-       <width>101</width>
-       <height>17</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Change color:</string>
-     </property>
-    </widget>
-    <widget class="QGraphicsView" name="cursorColor">
-     <property name="geometry">
-      <rect>
-       <x>120</x>
-       <y>30</y>
-       <width>71</width>
-       <height>41</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_3">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>40</y>
-       <width>91</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Cursor color:</string>
-     </property>
-    </widget>
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>200</y>
+       <y>170</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -375,7 +338,7 @@ border-style: inset;
      <property name="geometry">
       <rect>
        <x>90</x>
-       <y>230</y>
+       <y>200</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -415,7 +378,7 @@ border-style: inset;
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>200</y>
+       <y>170</y>
        <width>31</width>
        <height>17</height>
       </rect>
@@ -428,7 +391,7 @@ border-style: inset;
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>250</y>
+       <y>220</y>
        <width>60</width>
        <height>50</height>
       </rect>
@@ -451,6 +414,62 @@ border-style: inset;
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+    <widget class="QToolButton" name="toolButton_Pipette">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>60</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#toolButton_Pipette{
+border: 5px solid lightblue;
+border-style:outset;
+}
+
+#toolButton_Pipette:checked{
+border-style:inset;
+	background-color: rgb(114, 159, 207);
+}</string>
+     </property>
+     <property name="text">
+      <string>...</string>
+     </property>
+     <property name="icon">
+      <iconset resource="resource.qrc">
+       <normaloff>:/res/Icons/pipette.png</normaloff>:/res/Icons/pipette.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>30</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QFrame" name="frame_ForReplace">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>120</y>
+       <width>71</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
      </property>
     </widget>
    </widget>
@@ -513,6 +532,9 @@ border-style: inset;
     <property name="toolTip">
      <string>Save image</string>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
     <property name="styleSheet">
      <string notr="true">#Button_Save{
 	background-image: url(:/res/Icons/save.png);
@@ -552,6 +574,8 @@ border-style:inset;
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
