--- a/resource.qrc
+++ b/resource.qrc
@@ -4,5 +4,6 @@
         <file>Icons/undo.png</file>
         <file>Icons/open.png</file>
         <file>Icons/save.png</file>
+        <file>Icons/pipette.png</file>
     </qresource>
 </RCC>
