--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -571,8 +571,20 @@ border-style:inset;
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionDraw_image"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionDraw_image">
+   <property name="text">
+    <string>Draw image</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="resource.qrc"/>
