--- a/resource.qrc
+++ b/resource.qrc
@@ -5,5 +5,7 @@
         <file>Icons/open.png</file>
         <file>Icons/save.png</file>
         <file>Icons/pipette.png</file>
+        <file>Icons/curve_line-icon.png</file>
+        <file>Icons/rectangle_icon.png</file>
     </qresource>
 </RCC>
